# condorcet_vote

./: .gitignore  LICENSE  README.md  analyze_results.py  candidates.txt  pyproject.toml  streamlit_app.py
.streamlit/: config.toml  secrets_example.toml
pages/: success.py
