[project]
name = "condorcet-vote"
version = "0.1.0"
description = "Streamlit app to rank candidates for a Condorcet voting system"
authors = [
    {name = "Stéphane"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "st-gsheets-connection (>=0.1.0,<0.2.0)",
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"

